--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
-  "name": "MyAttendance",
+  "name": "MyAttendance – Attendance Portal",
   "short_name": "Attendance",
-  "description": "Attendance Portal, Track Your Attendance",
+  "description": "Track your attendance between any two dates with crystal-clear analytics and zero effort.",
   "icons": [
     {
       "src": "/icons/icon-192.png",
@@ -11,25 +11,28 @@
     {
       "src": "/icons/icon-512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any"
     },
     {
-      "src": "/icons/icon-192.png",
+      "src": "/icons/icon512_rounded.png",
       "sizes": "192x192",
       "type": "image/png",
       "purpose": "maskable"
     },
     {
-      "src": "/icons/icon512_rounded.png",
+      "src": "/icons/icon-512_maskable.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "maskable"
     }
   ],
-  "theme_color": "#FFFFFF",
-  "background_color": "#FFFFFF",
+  "theme_color": "#7C3AED",
+  "background_color": "#111827",
   "display": "standalone",
   "scope": "/",
   "start_url": "/",
-  "orientation": "portrait"
+  "orientation": "portrait",
+  "categories": ["education", "productivity"],
+  "lang": "en"
 }
