--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^12.23.12",
     "mongoose": "^8.16.4",
     "next": "15.4.2",
+    "nodemailer": "^7.0.5",
     "react": "19.1.0",
     "react-calendar": "^6.0.0",
     "react-dom": "19.1.0",
